Use correct fonts

--- a/css/index.css
+++ b/css/index.css
@@ -74,7 +74,7 @@
    */
 
   --serif: "Tiempos Text";
-  --sans: "Untitled Sans Test";
+  --sans: "Untitled Sans";
   --headline: "Adieu";
   --mono: "Pitch Sans";
 
