--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 templateClass: template-post
 ---
 <h1 class="post-title">{{ title }}</h1>
-
+<time class="post-date" datetime="{{ date | htmlDateString }}">{{ date | readableDate }}</time>
 {{ content | safe }}
 
-<time class="post-date" datetime="{{ date | htmlDateString }}">– {{ date | readableDate }} –</time>
+
