Tweak page width and alignment

--- a/css/index.css
+++ b/css/index.css
@@ -111,7 +111,7 @@
   --modular-scale-64: 16rem;
 
   
-  --max-width: 35rem;
+  --max-width: 38rem;
   --max-width-wide: 57rem;
 }
 
@@ -259,7 +259,7 @@ pre {
 .header__content {
   max-width: var(--max-width);
   display: flex;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   padding-bottom: 0rem;
 }
 
@@ -330,7 +330,7 @@ pre {
   padding-right: 1rem;
   display: flex;
 
-  /* margin: 0 auto; */
+  margin: 0 auto;
 }
 
 @media (min-width: 50rem) {
@@ -367,7 +367,7 @@ pre {
   padding-right: 1rem;
   padding-top: 0rem;
 
-  /* margin: 0 auto; */
+  margin: 0 auto;
 }
 
 @media (min-width: 50rem) {
@@ -787,7 +787,7 @@ pre {
 }
 
 .typeset > figure:not(.highlight) > img {
-  /* margin: 0 auto; */
+  margin: 0 auto;
   max-width: 100%;
 }
 
