--- a/css/index.css
+++ b/css/index.css
@@ -121,6 +121,7 @@
  * Font face
  */
 
+
 @font-face {
   font-family: "Untitled Sans";
   font-weight: 600;
@@ -323,7 +324,7 @@ body.dark {
 
 pre {
   font-family: var(--mono);
-  font-weight: 600;
+  font-weight: 400;
 }
 
 
@@ -824,7 +825,7 @@ pre {
 
 .typeset aside code {
   font-family: var(--mono);
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .typeset aside + h2 {
@@ -867,8 +868,13 @@ pre {
 
 .typeset p code {
   font-family: var(--mono);
-  font-weight: 600;
+  background: var(--gray-2);
+  border-bottom: 2px solid var(--gray-3);
+  font-weight: 400;
   line-height: 1.3;
+  font-size: var(--iota);
+  padding: 0 var(--modular-scale-1);
+  border-radius: 0.25rem;
 }
 
 .typeset > figure:not(.highlight) {
@@ -894,7 +900,7 @@ pre {
   padding: 0;
   margin: 0;
   font-family: var(--mono);
-  font-weight: 600;
+  font-weight: 400;
   font-size: var(iota);
   line-height: 1.75;
 }
