--- a/css/index.css
+++ b/css/index.css
@@ -112,7 +112,7 @@
   --modular-scale-64: 16rem;
 
 
-  --max-width: 40rem;
+  --max-width: 38rem;
   --max-width-wide: 57rem;
 }
 
@@ -521,7 +521,7 @@ pre {
 
 .typeset h1 {
   font-size: var(--epsilon);
-  font-family: var(--sans);
+  font-family: var(--serif);
   margin: 0;
   padding: 0;
   line-height: 1.22;
@@ -568,7 +568,7 @@ pre {
 
 .typeset h2 {
   font-size: var(--zeta);
-  font-family: var(--sans);
+  font-family: var(--serif);
   line-height: 1.25;
   margin: 0;
   padding: 0;
@@ -885,6 +885,17 @@ pre {
   font-family: var(--mono);
   background: var(--gray-2);
   border-bottom: 2px solid var(--gray-3);
+  font-weight: 400;
+  line-height: 1.3;
+  font-size: var(--iota);
+  padding: 0 var(--modular-scale-1);
+  border-radius: 0.25rem;
+}
+
+.dark .typeset p code {
+  background: var(--gray-9);
+  color: var(--gray-3);
+  border-bottom: 2px solid var(--gray-8);
   font-weight: 400;
   line-height: 1.3;
   font-size: var(--iota);
