--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,19 @@
   --gray-8: #343a40;
   --gray-9: #212529;
 
+  --warm-gray-0: #FAF9F7;
+  --warm-gray-1: #E8E6E1;
+  --warm-gray-2: #D3CEC4;
+  --warm-gray-3: #B8B2A7;
+  --warm-gray-4: #A39E93;
+  --warm-gray-5: #857F72;
+  --warm-gray-6: #625D52;
+  --warm-gray-7: #504A40;
+  --warm-gray-8: #423D33;
+  --warm-gray-9: #27241D;
+  --warm-gray-9-dark: #1d1a15;
+  --warm-gray-9-darker: #100f0d;
+
   --blue-0: #e7f5ff;
   --blue-1: #d0ebff;
   --blue-2: #a5d8ff;
@@ -45,6 +58,29 @@
   --blue-7: #1c7ed6;
   --blue-8: #1971c2;
   --blue-9: #1864ab;
+
+  --yellow-0: #FFFBEA;
+  --yellow-1: #FFF3C4;
+  --yellow-2: #FCE588;
+  --yellow-3: #FADB5F;
+  --yellow-4: #F7C948;
+  --yellow-5: #F0B429;
+  --yellow-6: #DE911D;
+  --yellow-7: #CB6E17;
+  --yellow-8: #B44D12;
+  --yellow-9: #8D2B0B;
+  --yellow-9-dark: #501907;
+
+  --red-0: #FFEEEE;
+  --red-1: #FACDCD;
+  --red-2: #F29B9B;
+  --red-3: #E66A6A;
+  --red-4: #D64545;
+  --red-5: #BA2525;
+  --red-6: #A61B1B;
+  --red-7: #911111;
+  --red-8: #780A0A;
+  --red-9: #610404;
 
   --teal-0: #e6fcf5;
   --teal-1: #c3fae8;
@@ -333,8 +369,8 @@ body {
 }
 
 body.dark {
-  background: var(--gray-9);
-  color: var(--gray-0);
+  background: var(--warm-gray-9-darker);
+  color: var(--warm-gray-0);
 }
 
 pre {
@@ -348,7 +384,7 @@ pre {
  */
 
 .header {
-  padding: var(--modular-scale-2) var(--modular-scale-4) var(--modular-scale-2);
+  padding: var(--modular-scale-8) var(--modular-scale-4) var(--modular-scale-8);
   /* background: var(--white); */
   /* box-shadow: 0 1px 4px 0px rgba(0,0,0,0.1); */
 }
@@ -382,13 +418,12 @@ pre {
 .site-name__link {
   text-decoration: none;
   align-self: center;
-  color: var(--gray-8);
-  font-family: var(--sans);
+  font-family: var(--serif);
   font-weight: 700;
 }
 
 .dark .site-name__link {
-  color: var(--gray-1);
+  color: var(--warm-gray-5);
 }
 
 .nav {
@@ -413,17 +448,17 @@ pre {
   text-decoration: none;
   font-family: var(--sans);
   font-weight: 400;
-  font-size: var(--theta);
+  font-size: var(--iota);
   color: var(--gray-8);
 }
 
 .dark .nav__link {
-  color: var(--gray-1);
+  color: var(--warm-gray-5);
 }
 
 .footer {
   margin-top: var(--modular-scale-16);
-  padding: var(--modular-scale-4) 0 var(--modular-scale-4);
+  padding: var(--modular-scale-8) 0 var(--modular-scale-8);
   /* background: var(--white);
   border-top: 1px solid var(--gray-1); */
 }
@@ -533,7 +568,7 @@ pre {
 }
 
 .dark .typeset h1 {
-  color: var(--gray-0);
+  color: var(--warm-gray-0);
 }
 
 .text-center {
@@ -580,7 +615,7 @@ pre {
 }
 
 .dark .typeset h2 {
-  color: var(--gray-0);
+  color: var(--warm-gray-0);
 }
 
 @media (min-width: 40rem) {
@@ -661,7 +696,7 @@ pre {
 }
 
 .dark .typeset p {
-  color: var(--gray-2);
+  color: var(--warm-gray-1);
 }
 
 .typeset p img {
@@ -682,7 +717,7 @@ pre {
 }
 
 .dark .typeset > .post-date {
-  color: var(--gray-3);
+  color: var(--warm-gray-5);
 }
 
 .typeset p + p,
@@ -722,7 +757,7 @@ pre {
 }
 
 .dark .typeset a {
-  color: var(--blue-4);
+  color: var(--red-3);
 
 }
 
@@ -739,7 +774,7 @@ pre {
 .dark .typeset a:hover,
 .dark .typeset a:active,
 .dark .typeset a:visited {
-  color: var(--blue-4);
+  color: var(--red-3);
 }
 
 
@@ -821,9 +856,9 @@ pre {
 }
 
 .dark .typeset aside {
-  border-left: 4px solid var(--green-4);
-  background: var(--green-9);
-  color: var(--gray-2);
+  border-left: 4px solid var(--yellow-4);
+  background: var(--yellow-9-dark);
+  color: var(--yellow-0);
 }
 
 .typeset aside a {
@@ -893,14 +928,9 @@ pre {
 }
 
 .dark .typeset p code {
-  background: var(--gray-9);
-  color: var(--gray-3);
-  border-bottom: 2px solid var(--gray-8);
-  font-weight: 400;
-  line-height: 1.3;
-  font-size: var(--iota);
-  padding: 0 var(--modular-scale-1);
-  border-radius: 0.25rem;
+  background: var(--warm-gray-9-dark);
+  color: var(--gray-1);
+  border-bottom: 2px solid var(--warm-gray-8);
 }
 
 .typeset > figure:not(.highlight) {
@@ -1173,7 +1203,7 @@ pre {
 
  .dark code[class*="language-"],
  .dark pre[class*="language-"] {
-	 color: var(--gray-3);
+	 color: var(--warm-gray-1);
 	 /* text-shadow: 0 1px rgba(0, 0, 0, 0.3); */
 	 /* font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace; */
 	 direction: ltr;
@@ -1203,7 +1233,7 @@ pre {
 
  .dark :not(pre) > code[class*="language-"],
  .dark pre[class*="language-"] {
-	 background: var(--gray-8)
+	 background: var(--warm-gray-9-dark)
  }
 
  /* Inline code */
