--- a/feed/feed.njk
+++ b/feed/feed.njk
@@ -1,9 +1,6 @@
 ---
 permalink: feed/feed.xml
-# eleventyExcludeFromCollections: true
-tags:
-	- nav
-navtitle: RSS
+eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
