--- a/index.njk
+++ b/index.njk
@@ -1,8 +1,13 @@
 ---
 layout: layouts/home.njk
 ---
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) { 
-    window.location += document.getElementById('redirect').dataset.redirectUrl.substr(1);
-  });
-</script>
+<div class="[ topo ]  border-t py-8">
+  <div class="[ banner ] [ py-2 max-w-xl ml-auto mr-auto ]">
+    <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-3xl md:text-4xl tracking-tight mt-0 mb-2 ]">
+      Frontend Developer
+    </h2>
+    <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
+      Currently interested in CSS architecture, React, design systems, and JavaScript testing.
+    </p>
+  </div>
+</div>
