--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="text-base sm:text-base md:text-lg lg:text-xl">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,44 +10,56 @@
     <link rel="stylesheet" href="{{ '/build/prism-base16-monokai.dark.css' | url }}?v=17">
     <link rel="alternate" href="{{ metadata.feed.path | url }}" type="application/atom+xml" title="{{ metadata.title }}">
     <!-- <link rel="stylesheet" href="//basehold.it/8">     -->
+    <link rel="stylesheet" href="https://use.typekit.net/vpn3zsm.css">
   </head>
-  <body class="line-numbers dark">
+  <body class="font-sans px-4">
     {% set postslist = collections.posts | head(-3) %}
 
-    <header class="header">
-      <div class="header__content">
-        <h1 class="site-name">
-          <a class="site-name__link" href="{{ postslist[0].url | url }}">
-            {{ metadata.title }}
-          </a>
-        </h1>
-        <nav class="nav">
-          <ul class="nav__list">
-            {%- for nav in collections.nav -%}
-            <li class="nav__item{% if nav.url == page.url %} nav__item--active{% endif %}">
-              <a class="nav__link" href="{{ nav.url | url }}">
-                {{ nav.data.navtitle }}
-              </a>
-            </li>
-            {%- endfor -%}
-            <li class="nav__item">
-              <a href="#" class="nav__link" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light">
-                Light|Dark
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </div>
+    <header class="[ site-header ] [ my-4 ]">
+      <a href="#content" class="visually-hidden">Skip to main content</a>
+
+      <div class="[ ml-auto mr-auto ]">
+        <div class="[ flex ]">
+          <h1>
+            <a 
+              class="[ site-header__link ] [ font-sans font-normal text-sm ]" 
+              href="/"
+            >
+              {{ metadata.title }}
+            </a>
+          </h1>
+          <nav class="[ pl-4 flex-auto text-right ]">
+              <ul class="[ inline-block w-full ]">
+                {%- for nav in collections.nav -%}
+                <li class="[ ml-3 inline {% if nav.url == page.url %} underline{% endif %} ]">
+                  <a class="[ site-header__link ] [ font-sans text-sm ]" href="{{ nav.url | url }}">
+                    {{ nav.data.navtitle }}
+                  </a>
+                </li>
+                {%- endfor -%}
+                <li class="[ ml-3 inline nav__item ]">
+                  <a href="#" class="[ site-header__button ] [ p-2 border border-solid font-sans text-sm ]" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light">
+                    <span class="hidden-when-dark">Dark mode</span>
+                    <span class="hidden shown-when-dark">Light mode</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+        </div>
+
+
+      
     </header>
 
-    <main{% if templateClass %} class="main typeset {{ templateClass }}"{% endif %}>
-      {{ content | safe }}
-    </main>
-
-    <footer class="footer">
-      <div class="footer__content">
-        <p>&copy; Aaron Marr 2019.</p>
+      <div id="content">
+          {{ content | safe }}
       </div>
+      
+
+
+    <footer class="[ py-8 mt-8 max-w-xl ml-auto mr-auto ]">
+      
+        <p class="text-sm font-sans">&copy; Aaron Marr 2019.</p>
     </footer>
 
     <div id="redirect" data-redirect-url="{{ postslist[0].url | url }}"</div>
