--- a/index.njk
+++ b/index.njk
@@ -4,10 +4,10 @@ layout: layouts/home.njk
 <div class="[ topo ]  border-t py-8">
   <div class="[ banner ] [ py-2 max-w-xl ml-auto mr-auto ]">
     <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-3xl md:text-4xl tracking-tight mt-0 mb-2 ]">
-      Hello, I'm Aaron.
+      Front-end Developer
     </h2>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
-      I'm a frontend developer based in Cornwall, UK.
+      Currently interested in building accessible, simple to use websites and applications through clean, performant code. Loves React, Functional CSS and Design Systems. Currently learning Laravel and Vue.js.
     </p>
   </div>
 </div>
