--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@ layout: layouts/home.njk
       Front-end Developer
     </h2>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
-      Currently interested in building accessible, simple to use websites and applications through clean, performant code. Loves React, Functional CSS and Design Systems. Currently learning Laravel and Vue.js.
+      Currently interested in building accessible, user-friendly websites and applications using clean, simple and performant code. Loves React, Functional CSS and Design Systems. Currently learning Laravel and Vue.js.
     </p>
   </div>
 </div>
