--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -11,12 +11,10 @@
   </head>
   <body class="font-sans px-4">
     {% set postslist = collections.posts | head(-3) %}
-
     <header class="[ site-header ] [ my-4 ]">
       <a href="#content" class="visually-hidden">Skip to main content</a>
-
-      <div class="[ ml-auto mr-auto ]">
-        <div class="[ flex ]">
+      <div class="ml-auto mr-auto">
+        <div class="flex">
           <h1>
             <a 
               class="[ site-header__link ] [ font-sans font-normal text-sm ]" 
@@ -25,44 +23,37 @@
               {{ metadata.title }}
             </a>
           </h1>
-          <nav class="[ pl-4 flex-auto text-right ]">
-              <ul class="[ inline-block w-full ]">
-                {%- for nav in collections.nav -%}
-                <li class="[ ml-3 inline {% if nav.url == page.url %} underline{% endif %} ]">
-                  <a class="[ site-header__link ] [ font-sans text-sm ]" href="{{ nav.url | url }}">
-                    {{ nav.data.navtitle }}
-                  </a>
-                </li>
-                {%- endfor -%}
-                <li class="[ ml-3 inline nav__item ]">
-                  <a href="#" class="[ site-header__button ] [ p-2 border border-solid font-sans text-sm ]" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light">
-                    <span class="hidden-when-dark">Dark mode</span>
-                    <span class="hidden shown-when-dark">Light mode</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
+          <nav class="pl-4 flex-auto text-right">
+            <ul class="inline-block w-full">
+              {%- for nav in collections.nav -%}
+              <li class="ml-3 inline {% if nav.url == page.url %} underline{% endif %}">
+                <a class="[ site-header__link ] [ font-sans text-sm ]" href="{{ nav.url | url }}">
+                  {{ nav.data.navtitle }}
+                </a>
+              </li>
+              {%- endfor -%}
+              <li class="ml-3 inline">
+                <a href="#" class="[ site-header__button ] [ p-2 border border-solid font-sans text-sm ]" onclick="localStorage.setItem('mode', (localStorage.getItem('mode') || 'dark') === 'dark' ? 'light' : 'dark'); localStorage.getItem('mode') === 'dark' ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')" title="Dark/light">
+                  <span class="hidden-when-dark">Dark mode</span>
+                  <span class="hidden shown-when-dark">Light mode</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
-
-
-      
-    </header>
-
-      <div id="content">
-          {{ content | safe }}
-      </div>
-      
-
-
-    <footer class="[ py-8 mt-8 max-w-xl ml-auto mr-auto ]">
-      
-        <p class="text-sm font-sans">&copy; Aaron Marr 2019.</p>
+      </header>
+      <main id="content">
+        {{ content | safe }}
+      </main>
+    <footer class="py-8 mt-8 max-w-lg ml-auto mr-auto">
+      <p class="text-sm font-sans">&copy; Aaron Marr 2019.</p>
     </footer>
-
-    <div id="redirect" data-redirect-url="{{ postslist[0].url | url }}"</div>
     <script>
       document.addEventListener('DOMContentLoaded', function(event) {
-        ((localStorage.getItem('mode') || 'dark') === 'dark') ? document.querySelector('body').classList.add('dark') : document.querySelector('body').classList.remove('dark')
-      })</script>
+        ((localStorage.getItem('mode') || 'dark') === 'dark') ? 
+          document.querySelector('body').classList.add('dark') : 
+          document.querySelector('body').classList.remove('dark');
+      })
+    </script>
   </body>
 </html>
