--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,6 +1,6 @@
 <div class="mb-8">
-  <div class="[ max-w-xl ml-auto mr-auto ]">
-    <ul reversed class="[ postlist ]" style="counter-reset: start-from {{ postslist.length + 1 }}">
+  <div class="max-w-lg ml-auto mr-auto">
+    <ul reversed class="postlist" style="counter-reset: start-from {{ postslist.length + 1 }}">
     {% for post in postslist | reverse %}
       <li class="postlist-item{% if post.url == url %} postlist-item-active{% endif %}">
         <a href="{{ post.url | url }}" class="[ postlist__link ] font-serif font-bold text-xl mb-0 block postlist-link">{% if post.data.title %}{{ post.data.title }}{% else %}<code>{{ post.url }}</code>{% endif %}</a>
