--- a/archive.njk
+++ b/archive.njk
@@ -6,9 +6,9 @@ navtitle: Blog
 permalink: /posts/
 templateClass: template-archive
 ---
-<div class="[ topo ]  border-t py-8">
-  <div class="[ banner ] [ py-2 max-w-xl ml-auto mr-auto ]">
-    <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-3xl md:text-4xl tracking-tight mt-0 mb-2 ]">
+<div class="border-t py-8">
+  <div class="[ banner ] [ py-2 max-w-lg ml-auto mr-auto ]">
+    <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
       Blog
     </h2>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
