--- a/index.njk
+++ b/index.njk
@@ -1,9 +1,9 @@
 ---
 layout: layouts/home.njk
 ---
-<div class="border-t py-8">
-  <div class="[ banner ] [ py-2 max-w-lg ml-auto mr-auto ]">
-    <h2 class="[ banner__headline ] [ font-bold font-serif leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
+<div class="border-t border-dotted pt-8 pb-4">
+  <div class="[ banner ] [ py-2 max-w-xl ml-auto mr-auto ]">
+    <h2 class="[ banner__headline ] [ font-bold font-sans leading-tight text-2xl md:text-3xl tracking-tight mt-0 mb-2 ]">
       Front-end Developer
     </h2>
     <p class="[ banner__strapline ] font-sans text-lg leading-snug text-sm">
